--- a/EmployeeHelper/Views/Employee/Index.cshtml
+++ b/EmployeeHelper/Views/Employee/Index.cshtml
@@ -53,9 +53,9 @@
                 @Html.DisplayFor(modelItem => item.Shift)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Update", "Update", new { id = item.EmployeeId }) |
                 @Html.ActionLink("Details", "Details", new { id = item.EmployeeId }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeId })
             </td>
         </tr>
     }
