fixed OTcreate but, added OT views for detail, delete, edit

--- a/EmployeeHelper/Views/OverTime/Index.cshtml
+++ b/EmployeeHelper/Views/OverTime/Index.cshtml
@@ -9,6 +9,17 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@if (TempData.ContainsKey("SaveOTResult"))
+{
+    <div class="alert alert-success fade in" role="alert">
+
+        <button type="button" class="close" data-dismiss="alert">
+            <span>&times;</span>
+        </button>
+        @TempData["SaveOTResult"]
+    </div>
+}
 <table class="table">
     <tr>
         <th>
@@ -23,23 +34,24 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.OTId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OTDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsAvailable)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.OTId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OTDay)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsAvailable)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.OTId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.OTId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.OTId })
+            </td>
+        </tr>
+    }
 
 </table>
