--- a/EmployeeHelper/Views/Employee/Details.cshtml
+++ b/EmployeeHelper/Views/Employee/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Update", "Update", new { id= Model.EmployeeId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
