removed time stamp from date in OT and Employee data, models, view

--- a/EmployeeHelper/Views/Employee/Details.cshtml
+++ b/EmployeeHelper/Views/Employee/Details.cshtml
@@ -39,7 +39,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HiringDate)
+            @{ string formatDate = Model.HiringDate.ToLongDateString();}
+            @Html.DisplayFor(model => formatDate)
         </dd>
 
     </dl>
