--- a/EmployeeHelper/Views/Employee/Delete.cshtml
+++ b/EmployeeHelper/Views/Employee/Delete.cshtml
@@ -40,7 +40,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HiringDate)
+            @{ string formatDate = Model.HiringDate.ToLongDateString();}
+            @Html.DisplayFor(model => formatDate)
         </dd>
 
     </dl>
