--- a/EmployeeHelper/Views/OverTime/Details.cshtml
+++ b/EmployeeHelper/Views/OverTime/Details.cshtml
@@ -31,7 +31,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.OTDay)
+            @{ string formatDate = Model.OTDay.ToLongDateString();}
+            @Html.DisplayFor(model => formatDate)
         </dd>
 
         <dt>
