added views, controller, service for bulktech finished

--- a/EmployeeHelper/Views/Shared/_Layout.cshtml
+++ b/EmployeeHelper/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employee")</li>
                     <li>@Html.ActionLink("OverTime", "Index", "OverTime")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Bulk/Tech", "Index", "BulkTech")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
