--- a/EmployeeHelper/Views/Employee/Details.cshtml
+++ b/EmployeeHelper/Views/Employee/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>EmployeeDetail</h4>
+    <h4>Employee Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +45,7 @@
 
     </dl>
 </div>
+<h4>OverTime</h4>
 <table class="table">
     <tr>
         <th>
@@ -67,15 +68,48 @@
                 @Html.DisplayFor(modelItem => formatDate2)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.OTId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.OTId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.OTId })
+               | @Html.ActionLink("Details", "Details","OverTime", new { id = item.OTId }, "") |
+            </td>
+        </tr>
+    }
+
+</table>
+<h4>Bulk/Tech Samples</h4>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.BTList[0].BTId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BTList[0].IsComplete)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BTList[0].DueOnDate)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in Model.BTList)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.BTId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsComplete)
+            </td>
+            <td>
+                @{ string formatDate3 = item.DueOnDate.ToLongDateString();}
+                @Html.DisplayFor(modelItem => formatDate3)
+            </td>
+            <td>
+               | @Html.ActionLink("Details", "Details", "BulkTech", new { id = item.BTId }, "") |
             </td>
         </tr>
     }
 
 </table>
 <p>
-    @Html.ActionLink("Update", "Update", new { id= Model.EmployeeId }) |
+    @Html.ActionLink("Update", "Update", new { id = Model.EmployeeId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
