added days/nights enum to OT table

--- a/EmployeeHelper/Views/OverTime/Delete.cshtml
+++ b/EmployeeHelper/Views/OverTime/Delete.cshtml
@@ -45,6 +45,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Days)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Days)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
 
