--- a/EmployeeHelper/Views/OverTime/Create.cshtml
+++ b/EmployeeHelper/Views/OverTime/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>OverTimeCreate</h4>
         <hr />
@@ -30,6 +30,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OTDay, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.OTDay, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Days, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Days, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Days, "", new { @class = "text-danger" })
             </div>
         </div>
 
