--- a/EmployeeHelper/Views/OverTime/Edit.cshtml
+++ b/EmployeeHelper/Views/OverTime/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>OverTimeEdit</h4>
         <hr />
@@ -46,6 +46,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HoursWorked, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HoursWorked, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Days, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Days, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Days, "", new { @class = "text-danger" })
             </div>
         </div>
 
