--- a/EmployeeHelper/Views/OverTime/Index.cshtml
+++ b/EmployeeHelper/Views/OverTime/Index.cshtml
@@ -56,7 +56,8 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.OTId }) |
                 @Html.ActionLink("Details", "Details", new { id = item.OTId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.OTId })
+                @Html.ActionLink("Delete", "Delete", new { id = item.OTId }) |
+                @Html.ActionLink("Work", "Work", new { id = item.OTId })
             </td>
         </tr>
     }
