--- a/EmployeeHelper/Views/OverTime/Work.cshtml
+++ b/EmployeeHelper/Views/OverTime/Work.cshtml
@@ -1,16 +1,16 @@
-﻿@model EmployeeHelper.Models.OTModels.OverTimeEdit
+﻿@model EmployeeHelper.Models.OTModels.OverTimeWork
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Work";
 }
 
-<h2>Edit</h2>
+<h2>Work</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>OverTimeEdit</h4>
         <hr />
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.IsAvailable, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -31,7 +31,7 @@
                     @Html.ValidationMessageFor(model => model.IsAvailable, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.OTDay, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -41,29 +41,21 @@
             </div>
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.HoursWorked, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.HoursWorked, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.HoursWorked, "", new { @class = "text-danger" })
             </div>
-        </div>*@
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Days, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Days, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Days, "", new { @class = "text-danger" })
-            </div>
         </div>
 
-        @*<div class="form-group">
+        <div class="form-group">
             @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmployeeId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
