--- a/EmployeeHelper/Views/OverTime/Create.cshtml
+++ b/EmployeeHelper/Views/OverTime/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal">
         <h4>OverTimeCreate</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.IsAvailable, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -23,7 +23,7 @@
                     @Html.ValidationMessageFor(model => model.IsAvailable, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.OTDay, htmlAttributes: new { @class = "control-label col-md-2" })
