--- a/EmployeeHelper/Views/OverTime/Work.cshtml
+++ b/EmployeeHelper/Views/OverTime/Work.cshtml
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.IsAvailable, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -31,7 +31,7 @@
                     @Html.ValidationMessageFor(model => model.IsAvailable, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.OTDay, htmlAttributes: new { @class = "control-label col-md-2" })
