added chooseOTlist view

--- a/EmployeeHelper/Views/Employee/Index.cshtml
+++ b/EmployeeHelper/Views/Employee/Index.cshtml
@@ -55,7 +55,8 @@
             <td>
                 @Html.ActionLink("Update", "Update", new { id = item.EmployeeId }) |
                 @Html.ActionLink("Details", "Details", new { id = item.EmployeeId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeId })
+                @Html.ActionLink("Delete", "Delete", new { id = item.EmployeeId }) |
+                @Html.ActionLink("Choose OT", "ChooseOTList", "OverTime", new { id = item.EmployeeId }, "")
             </td>
         </tr>
     }
