Added 4th and 5th table - models, views, controller, and service

--- a/EmployeeHelper/Views/Shared/_Layout.cshtml
+++ b/EmployeeHelper/Views/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                     <li>@Html.ActionLink("Employees", "Index", "Employee")</li>
                     <li>@Html.ActionLink("OverTime", "Index", "OverTime")</li>
                     <li>@Html.ActionLink("Bulk/Tech", "Index", "BulkTech")</li>
+                    <li>@Html.ActionLink("Tamc/Tymc", "Index", "TamcTymc")</li>
+                    <li>@Html.ActionLink("Buffers", "Index", "BufferReplacement")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
