--- a/EmployeeHelper/Views/Employee/Create.cshtml
+++ b/EmployeeHelper/Views/Employee/Create.cshtml
@@ -41,10 +41,10 @@
 
         <!--Test-->
         <div class="form-group">
-            @Html.LabelFor(model => model.Shift, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ShiftId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Shift, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Shift, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ShiftId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ShiftId, "", new { @class = "text-danger" })
             </div>
         </div>
         <!--End Test-->
@@ -57,7 +57,7 @@
     </div>
 }
 
-<div>
+<div class="actionlink">
     @Html.ActionLink("Back to List", "Index")
 </div>
 
