--- a/EmployeeHelper/Views/Home/Index.cshtml
+++ b/EmployeeHelper/Views/Home/Index.cshtml
@@ -1,31 +1,30 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<section class="homepage">
+    <div class="jumbotron">
+        <h1>Employee Helper</h1>
+        <p class="lead">ASP.NET Web Application</p>
+        <p><a href="/Employee/Index" class="btn btn-primary btn-lg">Register Employees &raquo;</a></p>
+    </div>
 
-<div class="jumbotron">
-    <h1>Employee Helper <br /> WORK IN PROGRESS</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>OverTime</h2>
+            <p>
+                Choose a date to create an OverTime event for employees.
+            </p>
+            <p><a class="btn btn-primary btn-lg" href="/OverTime/Index">OverTime List &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Shifts</h2>
+            <p>Update current shifts in rotation and view all of employees per shift.</p>
+            <p><a class="btn btn-primary btn-lg" href="/Shift/Index">Shift List &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Buffers</h2>
+            <p>Create buffer replacement dates for various tanks in production.</p>
+            <p><a class="btn btn-primary btn-lg" href="/BufferReplacement/Index">Buffer Dates &raquo;</a></p>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
