added dependency injection

--- a/EmployeeHelper/Views/Employee/Update.cshtml
+++ b/EmployeeHelper/Views/Employee/Update.cshtml
@@ -48,13 +48,13 @@
         </div>
 
         <!--Test-->
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Shifts, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.Shifts, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Shifts, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
         <!--End Test-->
 
         <div class="form-group">
